oxiplate-derive/tests/broken/if/stray-endif.stderr
error: Unexpected 'endif' statement
 --> tests/broken/if/stray-endif.rs:4:36
  |
4 | #[oxiplate_inline("{{ action }}{%- endif -%}")]
  |                                    ^^^^^
